# IOT_FINAL_PRACTICE

./: .gitignore  README.md  docker-compose.yml
HI3861/wifi-iot/app/: BUILD.gn
HI3861/wifi-iot/app/distance/: BUILD.gn  distance.c  distance.h  main.c  net_params.h
NodeServer/: .dockerignore  .env  Dockerfile  OCR.js  client.js  index.js  package-lock.json  package.json  test.client.js  workflow.js
NodeServer/database/: index.js  mySQL.js
NodeServer/database/model/: scorelist.model.js  student.model.js
Python/: Dockerfile  capture.py  requirements.txt
Vue/: Dockerfile  package-lock.json  package.json
Vue/src/: App.vue
Vue/src/components/: Capture.vue  HelloWorld.vue  RaspiClient.vue
picture/: OCR方案修改.iodraw  python推流可实现版.iodraw  python理想SCF版.iodraw  交互前端.iodraw  整体架构图.iodraw  服务器原理图.iodraw  未命名绘图 (9).png.lnk  流程示意图.iodraw  物联网设备.iodraw
